# privacy-policy

./: Cargo.toml  Dockerfile
public/: index.html
public/1705309910_nusameta-nagara-privacy-policy-english-version-update-2023.11.28/: styles.css
src/: main.rs
