[package]
name = "privacy-policy"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.4.1", default-features = false, features = ["macros"] }
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"] }
mimalloc = { version = "0.1.39", features = ["local_dynamic_tls", "override"] }
